# ai-assistant

./: .gitignore  ORGANIZATION.md  README.md  main.ipynb  main.py  pyproject.toml  run.py
app/ingest/: chunking.py  loaders.py
src/: __init__.py  chains.py  cli.py  config.py  core.py  graph.py  retriever.py  state.py  tools.py
src/agents/: __init__.py  coordinator.py  critic.py  graph.py  librarian.py  researcher.py  summarizer.py  translator.py
src/graph/: __init__.py  app.py  nodes.py
src/ingest/: chunking.py  loaders.py
src/tasks/: __init__.py  cross_platform.py  macos_agent.py
tests/: test_loaders.py
