[project]
name = "ai-assistant"
version = "0.1.0"
description = "Your personal AI assistant - RAG, search, jokes, and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=0.2.0",
    "pypdf>=5.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "ipykernel>=7.2.0",
    "tavily-python>=0.3.0",
    "tiktoken>=0.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pymupdf>=1.27.1",
    "chromadb>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
ai = "src.cli:app_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
